Adding last-played-champions skeleton and some backend changes